# geom2vec

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
Tutorial/: 2_my_first_gnn.ipynb  3_load_checkpoint.ipynb  5_time_lagged_analysis.ipynb  6_infer_features_protein.ipynb  7_subformer_prot.ipynb
Tutorial/.ipynb_checkpoints/: 7_subformer_prot-checkpoint.ipynb
checkpoints/: et_l6_h64_rbf64_r75.pth  tensornet_l3_h64_rbf32_r5.pth  visnet_l6_h64_rbf64_r75.pth
examples/: 0_infer_and_load_data.ipynb  1_infer_mdanalysis.ipynb  2_vamp_workflow.ipynb  2_vampnet_token_mixing.ipynb  3_vamp_spib_workflow.ipynb  4_biased_vamp_workflow.ipynb  5_visualize_attention_map.ipynb  6_spib_villin_submixer_gvp.ipynb  training.py  training_otf.py
examples/training_scripts/random/: training.py  training_otf.py
examples/training_scripts/temporal/: chignolin_temporal_otf.sbatch  training.py  training_otf.py
geom2vec/: __init__.py  infer.py  utils.py
geom2vec/data/: __init__.py  data.py  infer.py  util.py  util_torch.py
geom2vec/downstream_models/: __init__.py  lobe.py  lobe_flat.py  lobe_otf.py
geom2vec/downstream_models/SPIB/: base.py  spib.py  vae.py
geom2vec/downstream_models/committor/: svcn.py  utils.py  var_comm.py  vcn.py
geom2vec/downstream_models/vamp/: dataprocessing.py  model.py  srvnet.py  stopvampnet.py  utils.py  vampnet.py
geom2vec/layers/: equivariant.py  gvp.py  mixers.py  mlps.py
geom2vec/models/: __init__.py  subformer_prot.py
geom2vec/models/torchmd/: main_model.py  output_modules.py  tensornet.py  utils.py  wrapper.py
geom2vec/pretrain/datasets/: denali.py  pcqm4m.py
geom2vec/pretrain/train/: pretrain_tensornet.py
geom2vec/representation_models/: visnet.py
geom2vec/representation_models/torchmd/: args.py  et.py  main_model.py  output_modules.py  prior.py  tensornet.py  utils.py
src/geom2vec/: __init__.py
src/geom2vec/data/: __init__.py  features.py  io.py  preprocessing.py
src/geom2vec/models/: __init__.py  factory.py
src/geom2vec/models/downstream/: __init__.py  lobe.py
src/geom2vec/models/representation/: __init__.py  visnet.py
src/geom2vec/nn/: __init__.py  equi_attention.py  equi_layers.py  equivariant.py  mlps.py
src/geom2vec/nn/triton/: __init__.py
src/geom2vec/train/: pretrain_tensornet.py
src/geom2vec/train/datasets/: __init__.py  pcqm4m.py
tutorial/: 1_Installation.ipynb  4_infer_features.ipynb  insulin_full.ipynb
tutorial/notebooks/: 0_infer_and_load_data.ipynb  1_vampnet_mlp.ipynb  2_vampnet_token_mixing.ipynb  3_variational_comm.ipynb  4_stopvampnet.ipynb
(+24 files in other folders)
